# quartz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
example/: main.cpp
examples/game_of_life/: main.cpp
examples/pong/: aabb.cpp  ball.cpp  main.cpp  player.cpp
examples/pong/include/: aabb.hpp  ball.hpp  game.hpp  player.hpp
quartz/: quartz.h  quartz.hpp  quartz_impl.cpp
quartz/impl/: base.cpp  collisions.cpp  gfx_info.cpp  glload.cpp  input.cpp  math.cpp  notify.cpp  quartz.cpp  render2D.cpp  renderer.cpp  resources.cpp  shapes.cpp  viewport.cpp  window.cpp
quartz/impl/builtin_shaders/: 2d.fs  2d.vs
quartz/impl/internals/: window.h
quartz/include/: api_compat.h  base.h  base.hpp  collisions.hpp  colors.h  common.h  common.hpp  gfx_info.h  gfx_info.hpp  glinclude.hpp  input.h  input.hpp  math.h  math.hpp  notify.h  quartz.hpp  render2D.h  render2D.hpp  renderer.hpp  resources.h  shapes.h  shapes.hpp  viewport.h  viewport.hpp  window.h  window.hpp
src/: glload.cpp  main.cpp  quartz.cpp  quartz_draw.cpp  quartz_input.cpp  quartz_math.cpp  quartz_renderer.cpp  quartz_viewport.cpp  quartz_window.cpp
src/include/: glinclude.hpp  glload.hpp  quartz.hpp  quartz_common.hpp  quartz_draw.hpp  quartz_math.hpp  quartz_renderer.hpp  quartz_viewport.hpp  quartz_window.hpp
